// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposal renders votes in HTML when voting is open 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <div
    class="proposal"
  >
    <div
      class="page-profile__header__info"
    >
      <span
        class="proposal-status pink"
      >
        
          Voting Period
        
      </span>
       
      <h2
        class="proposal-title"
      >
        VotingPeriod proposal
      </h2>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        color="primary"
        disabled="true"
        id="deposit-btn"
        value="Deposit"
      />
       
      <tmbtn-stub
        color="primary"
        id="vote-btn"
        value="Vote"
      />
    </div>
  </div>
   
  <textblock-stub
    content="custom text proposal description"
  />
   
  <!---->
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Total Vote Count
      </h4>
       
      <span>
        
          100,000,000% /
          10,000
        
      </span>
    </li>
     
    <li>
      <h4>
        Yes
      </h4>
       
      <span>
        
          10% /
          1,000
        
      </span>
    </li>
     
    <li>
      <h4>
        No
      </h4>
       
      <span>
        
          20% /
          2,000
        
      </span>
    </li>
     
    <li>
      <h4>
        No with Veto
      </h4>
       
      <span>
        
          30% /
          3,000
        
      </span>
    </li>
     
    <li>
      <h4>
        Abstain
      </h4>
       
      <span>
        
          40% /
          4,000
        
      </span>
    </li>
  </ul>
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Proposal ID
      </h4>
       
      <span>
        
      </span>
    </li>
     
    <li>
      <h4>
        Submitted
      </h4>
       
      <span>
        January 1st 1970, 00:00
      </span>
    </li>
     
    <li>
      <h4>
        Voting Start Date
      </h4>
       
      <span>
        January 3rd 1970, 00:00
      </span>
    </li>
     
    <li>
      <h4>
        Voting End Date
      </h4>
       
      <span>
        January 5th 1970, 00:00
      </span>
    </li>
  </ul>
   
  <modaldeposit-stub
    denom="STAKE"
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
   
  <modalvote-stub
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
</tmpage-stub>
`;

exports[`PageProposal should display proposal page if user has signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <div
    class="proposal"
  >
    <div
      class="page-profile__header__info"
    >
      <span
        class="proposal-status pink"
      >
        
          Voting Period
        
      </span>
       
      <h2
        class="proposal-title"
      >
        VotingPeriod proposal
      </h2>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        color="primary"
        disabled="true"
        id="deposit-btn"
        value="Deposit"
      />
       
      <tmbtn-stub
        color="primary"
        id="vote-btn"
        value="Vote"
      />
    </div>
  </div>
   
  <textblock-stub
    content="custom text proposal description"
  />
   
  <!---->
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Total Vote Count
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        Yes
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        No
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        No with Veto
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        Abstain
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
  </ul>
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Proposal ID
      </h4>
       
      <span>
        
      </span>
    </li>
     
    <li>
      <h4>
        Submitted
      </h4>
       
      <span>
        January 1st 1970, 00:00
      </span>
    </li>
     
    <li>
      <h4>
        Voting Start Date
      </h4>
       
      <span>
        January 3rd 1970, 00:00
      </span>
    </li>
     
    <li>
      <h4>
        Voting End Date
      </h4>
       
      <span>
        January 5th 1970, 00:00
      </span>
    </li>
  </ul>
   
  <modaldeposit-stub
    denom="STAKE"
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
   
  <modalvote-stub
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
</tmpage-stub>
`;

exports[`PageProposal should display proposal page should default tally to 0 if it's not yet present  1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <div
    class="proposal"
  >
    <div
      class="page-profile__header__info"
    >
      <span
        class="proposal-status pink"
      >
        
          Voting Period
        
      </span>
       
      <h2
        class="proposal-title"
      >
        VotingPeriod proposal
      </h2>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        color="primary"
        disabled="true"
        id="deposit-btn"
        value="Deposit"
      />
       
      <tmbtn-stub
        color="primary"
        id="vote-btn"
        value="Vote"
      />
    </div>
  </div>
   
  <textblock-stub
    content="custom text proposal description"
  />
   
  <!---->
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Total Vote Count
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        Yes
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        No
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        No with Veto
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        Abstain
      </h4>
       
      <span>
        
          0% /
          0
        
      </span>
    </li>
  </ul>
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Proposal ID
      </h4>
       
      <span>
        
      </span>
    </li>
     
    <li>
      <h4>
        Submitted
      </h4>
       
      <span>
        January 1st 1970, 00:00
      </span>
    </li>
     
    <li>
      <h4>
        Voting Start Date
      </h4>
       
      <span>
        January 3rd 1970, 00:00
      </span>
    </li>
     
    <li>
      <h4>
        Voting End Date
      </h4>
       
      <span>
        January 5th 1970, 00:00
      </span>
    </li>
  </ul>
   
  <modaldeposit-stub
    denom="STAKE"
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
   
  <modalvote-stub
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
</tmpage-stub>
`;

exports[`PageProposal should display proposal page should show a loader if the necessary data hasen't been loaded 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmdataloading-stub
    title="Data is loading…"
  />
</tmpage-stub>
`;

exports[`PageProposal shows an error if the proposal couldn't be found 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmdataerror-stub />
</tmpage-stub>
`;
